--- a/_notebooks/2023-10-24-Individual-review.ipynb
+++ b/_notebooks/2023-10-24-Individual-review.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "layout: post\n",
+    "title: Passion project/ code Review\n",
+    "description: Passion project work and review\n",
+    "courses: {'compsci': {'week': 8}}\n",
+    "type: tangibles\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Overall Goals and plans for passion project\n",
     "Create a way to get reccomendations for all sorts of media\n",
     "Jake: work on the front end API usage for song and show\n",
