--- a/_posts/2023-11-06-College.md
+++ b/_posts/2023-11-06-College.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title: Live College Board
+description: Notes while taking test
+courses: {'compsci': {'week': 8}}
+type: hacks
+---
+
 ## questions I struggled with
 Q1-5-Medium difficulty felt confident for all
 
