--- a/_posts/2023-11-06-Github.md
+++ b/_posts/2023-11-06-Github.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title: Key commits
+description: Github pages
+courses: {'compsci': {'week': 8}}
+type: tangibles
+---
 ## Total commits for each Repo
 student: 47
 commits for
