--- a/_posts/2023-11-06-Plan.md
+++ b/_posts/2023-11-06-Plan.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title: Individual Review Plan
+description: steps for review
+courses: { compsci: { week: 8 } }
+type: plans
+---
 ## Individual Review Plan
 + Go over the main code plans very briefly 
 + Go over passion project plans aswell as individual code
