--- a/_posts/2023-11-06-Wrong.md
+++ b/_posts/2023-11-06-Wrong.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Pseudo Code Notes
-description: Connecting Pseudo code to python
+title: College Board Reflection
+description: College Board review
 courses: { compsci: { week: 8 } }
-type: hacks
+type: tangibles
 ---
 
 ## Questions I got wrong 
