--- a/_notebooks/2023-12-11-Computing-Bias-Team-Teach.ipynb
+++ b/_notebooks/2023-12-11-Computing-Bias-Team-Teach.ipynb
@@ -39,7 +39,7 @@
     "A. An email filtering system accurately categorizes emails into spam and non-spam based on a diverse set of features, minimizing false positives and false negatives. <br>\n",
     "B. A navigation app provides real-time traffic updates and alternate routes to users, considering various factors such as traffic volume, road closures, and weather conditions. <br>\n",
     "C. An image recognition algorithm identifies objects in photographs with high accuracy, regardless of the gender, ethnicity, or age of the individuals depicted.<br>\n",
-    "D. An automated hiring system consistently favors candidates from specific educational institutions and backgrounds, resulting in the exclusion of qualified applicants from diverse backgrounds."
+    "## D. An automated hiring system consistently favors candidates from specific educational institutions and backgrounds, resulting in the exclusion of qualified applicants from diverse backgrounds."
    ]
   },
   {
@@ -65,7 +65,8 @@
    "metadata": {},
    "source": [
     "## Popcorn Hack #2:\n",
-    "An online example of computing bias is when an HP computer’s facial recognition system couldn’t track the face of someone with darker skin. Why is this and what type of bias is it? Do you think it was intentional or unintentional?"
+    "An online example of computing bias is when an HP computer’s facial recognition system couldn’t track the face of someone with darker skin. Why is this and what type of bias is it? Do you think it was intentional or unintentional?\n",
+    "Data bias unintentional "
    ]
   },
   {
@@ -87,7 +88,8 @@
    "source": [
     "## Popcorn Hack #3:\n",
     "\n",
-    "- What is another scenario of data collection in everyday applications and situations?"
+    "- What is another scenario of data collection in everyday applications and situations?\n",
+    "- Advertisements intrests "
    ]
   },
   {
@@ -142,7 +144,9 @@
     "## Homework:\n",
     "Problem: Biased Predictive Policing Algorithm: A city implements a predictive policing algorithm to allocate law enforcement resources more efficiently. \n",
     "However, concerns arise as community members and activists notice that the algorithm appears to disproportionately target certain neighborhoods, leading to over-policing and potential violations of civil rights.\n",
-    "Provide a solution to how this situation can be resolved, and how the computing bias can be removed. Explain which method of mitigation you will use and how it works. "
+    "Provide a solution to how this situation can be resolved, and how the computing bias can be removed. Explain which method of mitigation you will use and how it works. \n",
+    "## answer \n",
+    "The method of mitigation I would use is output correction. Since the output is making biased decisions against certain neighborhoods you would need to adjust the outputs about the tarrgeting of certain communities.A way to fix this is to use preprocessing since it would prevent any biases from being formed by analyzing the data before it is outputted.b"
    ]
   }
  ],
