--- a/_notebooks/2023-08-17-Routing-And-Computing.ipynb
+++ b/_notebooks/2023-08-17-Routing-And-Computing.ipynb
@@ -154,6 +154,13 @@
     "\n",
     "3. A meteorological institute wants to run a high resolution weather solution to predict weather patterns in real time. This simulations will require vast amouts of data from various sources such as satilite imagrey and historical weather data. Distributed"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Homework will be spoken on check slack for link aswell as grading later on"
+   ]
   }
  ],
  "metadata": {
