--- a/_notebooks/2023-12-18-Legal-Ethical-Concerns.ipynb
+++ b/_notebooks/2023-12-18-Legal-Ethical-Concerns.ipynb
@@ -76,7 +76,9 @@
    "source": [
     "## Popcorn Hack #1\n",
     "\n",
-    "What is the primary purpose of Copyright law, and how does it protect Intellectual Property? Provide a brief explanation of the key rights granted to creators under Copyright."
+    "What is the primary purpose of Copyright law, and how does it protect Intellectual Property? Provide a brief explanation of the key rights granted to creators under Copyright.\n",
+    "\n",
+    "To prevent people from unlawfully stealing someone's work and taking credit for something that is not theirs. "
    ]
   },
   {
@@ -109,7 +111,8 @@
    "source": [
     "## Popcorn Hack #2\n",
     "\n",
-    "What are the main advantages of Open Source software? How does it foster collaboration in the development community?"
+    "What are the main advantages of Open Source software? How does it foster collaboration in the development community?\n",
+    "Open source softwate is good since it allows others to use your code and add their ideas on top of it. It fosters collaboration since it allows for others to work together and build upon others work. "
    ]
   },
   {
@@ -142,6 +145,14 @@
     "#### [Google Form (Quiz)](https://docs.google.com/forms/d/e/1FAIpQLSdbVlNG-KRIOsdhpqm9DBcdtxqDefy9GF1qi4kdIWgvH8bbbg/viewform?usp=sf_link)\n",
     "\n",
     "Don't forget to document what you learned through utterances on this file on your blog."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What I learned.\n",
+    "I learned about the main benefits of open sourcing and how important it is in the coding and software world. Also, I learned what copy right is and how it protects the creator's work. Lastly, I learned about all the ethical and legal concerns regarding open sourcing and how it can technically be very good, but also can be negative.  "
    ]
   }
  ],
