--- a/_notebooks/2023-12-21-Safe_computing.ipynb
+++ b/_notebooks/2023-12-21-Safe_computing.ipynb
@@ -67,7 +67,8 @@
    "metadata": {},
    "source": [
     "### Popcorn Hack #1\n",
-    "What measures can individuals take to better protect their PII in an increasingly interconnected digital world?"
+    "What measures can individuals take to better protect their PII in an increasingly interconnected digital world?\n",
+    "airplane mode, strong passwords, and vpn."
    ]
   },
   {
@@ -135,7 +136,8 @@
     "This way, no matter what, our private keys are not accessible anywhere, and people can only encrypt messages if our public keys are leaked, and not decrypt them.\n",
     "\n",
     "## Popcorn Hack #2\n",
-    "- Let's say we have an encrypted message \"mjqqt\". If the Caesar cipher shifted the letters by 5, what is the original message?\n"
+    "- Let's say we have an encrypted message \"mjqqt\". If the Caesar cipher shifted the letters by 5, what is the original message?\n",
+    "- Hello\n"
    ]
   },
   {
@@ -175,7 +177,10 @@
     "* Routers\n",
     "* Advertisments\n",
     "* Attachements\n",
-    "* Pop ups"
+    "* Pop ups\n",
+    "* links\n",
+    "* public wifi\n",
+    "* "
    ]
   },
   {
