--- a/_notebooks/2023-12-21-Safe_computing.ipynb
+++ b/_notebooks/2023-12-21-Safe_computing.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: False\n",
+    "toc: true\n",
+    "comments: true\n",
     "layout: post\n",
-    "hide: False\n",
-    "title: P2 | 5.6 - Safe Computing\n",
-    "description: Team Teach On Safe Computing\n",
-    "courses: {'compsci': {'week': 14}}\n",
-    "type: tangibles\n",
+    "title: 5.6 safe computing\n",
+    "description: safe computing\n",
+    "courses: {compsci: {week: 6}}\n",
+    "type: hacks\n",
     "---"
    ]
   },
