--- a/_notebooks/2024-1-11-College.ipynb
+++ b/_notebooks/2024-1-11-College.ipynb
@@ -4,13 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## College Board Quiz Review"
+    "---\n",
+    "toc: true\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: college board\n",
+    "description: college mc\n",
+    "courses: {compsci: {week: 4}}\n",
+    "type: tangibles\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## College Board Quiz Review\n",
+    "\n",
     "- Questions 1-4 were easy\n",
     "- Question 5 was confusing since the answer that I thought to be correct before looking at the options wasn't there. Also, when I looked it up the answer that showed up was not an option.\n",
     "- question 6-8 were easy\n",
