--- a/_notebooks/2023-01-9-Team-T.ipynb
+++ b/_notebooks/2023-01-9-Team-T.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "toc: true\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: team grading\n",
+    "courses: {compsci: {week: 5}}\n",
+    "type: plans\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<table border=\"1\">\n",
     "  <thead>\n",
     "    <tr>\n",
