--- a/_notebooks/2023-11-17-Digital-Divide.ipynb
+++ b/_notebooks/2023-11-17-Digital-Divide.ipynb
@@ -5,13 +5,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "layout: post\n",
     "toc: true\n",
-    "title: Digital Divide Team Teach\n",
-    "description: Abdullah, Anika, Alisha, Sergi, Vance.\n",
-    "courses: { csp: {week: 13} }\n",
-    "categories: []\n",
-    "type: ccc\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: digital divide\n",
+    "courses: {compsci: {week: 5}}\n",
+    "type: hacks\n",
     "---"
    ]
   },
