--- a/_notebooks/2023-11-30-Routing-And-Computing.ipynb
+++ b/_notebooks/2023-11-30-Routing-And-Computing.ipynb
@@ -5,12 +5,11 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: false\n",
+    "toc: true\n",
     "comments: true\n",
-    "layout: notebook\n",
-    "title: IPYNB Table, Code\n",
-    "description: Team teach on routing and computing \n",
-    "courses: { csp: {week: 1} }\n",
+    "layout: post\n",
+    "title: Routing and computing\n",
+    "courses: {compsci: {week: 5}}\n",
     "type: hacks\n",
     "---"
    ]
