--- a/_posts/2024-01-22-Data.md
+++ b/_posts/2024-01-22-Data.md
@@ -1,32 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clash Royale Card Search</title>
-    <style>
-        /* Basic styling */
-        body {
-            font-family: Arial, sans-serif;
-        }
-        #cardData {
-            margin-top: 20px;
-        }
-    </style>
-</head>
-<body>
-    <h1>Search for Clash Royale Cards</h1>
-    <input type="text" id="searchBox" placeholder="Enter card name">
-    <button onclick="searchCard()">Search</button>
-    <div id="cardData">
-        <!-- Card data will be displayed here -->
-    </div>
-    <script>
-        // Sample data format - replace with your actual card data
-        const cardData = [
-        {
-  "items": [
-    {
+var cardData = {
+    "items": [
+                {
       "name": "Knight",
       "id": 26000000,
       "maxLevel": 14,
@@ -245,6 +219,16 @@
         "medium": "https://api-assets.clashroyale.com/cards/300/0p0gd0XaVRu1Hb1iSG1hTYbz2AN6aEiZnhaAib5O8Z8.png"
       },
       "rarity": "epic"
+    },
+    {
+      "name": "Nigger",
+      "id": 26000021,
+      "maxLevel": 12,
+      "elixirCost": 4,
+      "iconUrls": {
+        "medium": "https://api-assets.clashroyale.com/cards/300/Ubu0oUl8tZkusnkZf8Xv9Vno5IO29Y-jbZ4fhoNJ5oc.png"
+      },
+      "rarity": "rare"
     },
     {
       "name": "Hog Rider",
@@ -1147,9 +1131,9 @@
       },
       "rarity": "common"
     }
-  ],
-  "supportItems": [
-    {
+            ],
+            "supportItems": [
+              {
       "name": "Tower Princess",
       "id": 159000000,
       "maxLevel": 14,
@@ -1167,27 +1151,5 @@
       },
       "rarity": "epic"
     }
-  ]
-}
-        ];
-        function searchCard() {
-            const searchText = document.getElementById('searchBox').value.toLowerCase();
-            const result = cardData.find(card => card.name.toLowerCase() === searchText);
-            const displayArea = document.getElementById('cardData');
-            displayArea.innerHTML = ''; // Clear previous results
-            if (result) {
-                displayArea.innerHTML = `<div>
-                    <h2>${result.name}</h2>
-                    <p>ID: ${result.id}</p>
-                    <p>Max Level: ${result.maxLevel}</p>
-                    <p>Elixir Cost: ${result.elixirCost}</p>
-                    <p>Rarity: ${result.rarity}</p>
-                    <img src="${result.iconUrls.medium}" alt="${result.name}" />
-                </div>`;
-            } else {
-                displayArea.innerHTML = '<p>Card not found.</p>';
-            }
-        }
-    </script>
-</body>
-</html>
+            ]
+        };
