--- a/_posts/2024-01-30-Signup.md
+++ b/_posts/2024-01-30-Signup.md
@@ -124,7 +124,7 @@ The script defines a function when the page loads. This function is triggered wh
     fetch(url, authOptions)
     function login_user(){
         // Set Authenticate endpoint
-        const url = uri + '/api/users/';
+        const url = uri + '/api/users/authenticate';
         // Set the body of the request to include login data from the DOM
         const body = {
             name: document.getElementById("name").value,
