--- a/_posts/2024-01-31-LogIn.md
+++ b/_posts/2024-01-31-LogIn.md
@@ -82,9 +82,9 @@ span.psw {
 </form>
 <script type="module">
     import { uri, options } from '{{site.baseurl}}/assets/js/api/config.js';
-    function login_user(){
-      var myHeaders = new Headers();
-myHeaders.append("Content-Type", "application/json");
+    function login_user() {
+        var myHeaders = new Headers();
+        myHeaders.append("Content-Type", "application/json");
         const url = uri + '/api/users/authenticate';
         const body = {
             uid: document.getElementById("uid").value,
@@ -103,7 +103,8 @@ myHeaders.append("Content-Type", "application/json");
                 console.log(errorMsg);
                 return;
             }
-            window.location.href = "{{site.baseurl}}/";
+            // Redirect to the specified URL upon successful login
+            window.location.href = "https://dantea-tech.github.io/student/2024/01/30/Check.html";
         })
         .catch(err => {
             console.error(err);
