--- a/_posts/2024-02-08-Index.md
+++ b/_posts/2024-02-08-Index.md
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Card Display and Flip</title>
+    <title>Clash Royale Card Display and Flip</title>
     <style>
         .card-container {
             perspective: 1000px;
@@ -26,21 +26,23 @@
             height: 100%;
             backface-visibility: hidden;
         }
-        .card-front {
-            /* Placeholder for styling */
-        }
-        .card-back {
-            transform: rotateY(180deg);
+        .card-front, .card-back {
             display: flex;
-            justify-content: center;
             align-items: center;
-            background-color: lightgrey;
-            font-size: 14px;
-            padding: 10px;
+            justify-content: center;
+            font-size: 12px;
+            padding: 5px;
             box-sizing: border-box;
         }
+        .card-front {
+            background: #fff;
+        }
+        .card-back {
+            background: lightgray;
+            transform: rotateY(180deg);
+        }
         img {
-            width: 100%;
+            max-width: 100%;
             height: auto;
         }
     </style>
@@ -1202,7 +1204,7 @@
       "rarity": "epic"
     }
             ]
-        };    
+        };
         function createCard(card) {
             var container = document.createElement('div');
             container.className = 'card-container';
@@ -1210,10 +1212,10 @@
             cardElement.className = 'card';
             var frontFace = document.createElement('div');
             frontFace.className = 'card-face card-front';
-            frontFace.innerHTML = `<img src="${card.imageUrl}" alt="${card.name}">`;
+            frontFace.innerHTML = `<img src="${card.iconUrls.medium}" alt="${card.name}">`;
             var backFace = document.createElement('div');
             backFace.className = 'card-face card-back';
-            backFace.innerHTML = `<strong>${card.name}</strong><br>Elixir: ${card.elixirCost}<br>${card.rarity}`;
+            backFace.innerHTML = `<strong>${card.name}</strong><br>Elixir: ${card.elixirCost}<br>Rarity: ${card.rarity}`;
             cardElement.appendChild(frontFace);
             cardElement.appendChild(backFace);
             cardElement.addEventListener('click', function() {
@@ -1224,7 +1226,7 @@
         }
         function displayCards() {
             var cardsContainer = document.getElementById('cards');
-            cardsData.forEach(function(card) {
+            cardData.items.concat(cardData.supportItems).forEach(function(card) {
                 cardsContainer.appendChild(createCard(card));
             });
         }
