--- a/_posts/2024-02-08-Index.md
+++ b/_posts/2024-02-08-Index.md
@@ -45,10 +45,27 @@
             max-width: 100%;
             height: auto;
         }
+    .deck-builder {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 10px;
+            margin-top: 20px;
+        }
+        .deck-card {
+            width: 100px;
+            height: 140px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid #ddd;
+            box-shadow: 0 0 5px #ccc;
+            background: #f9f9f9;
+        }
     </style>
 </head>
 <body>
     <div id="cards"></div>
+    <div id="deck-builder" class="deck-builder"></div> 
     <script>
         var cardData = {
     "items": [
@@ -1205,6 +1222,17 @@
     }
             ]
         };
+        function addToDeck(card) {
+            var deckBuilder = document.getElementById('deck-builder');
+            if (deckBuilder.children.length < 8) {
+                var cardElement = document.createElement('div');
+                cardElement.className = 'deck-card';
+                cardElement.innerHTML = `<img src="${card.iconUrls.medium}" alt="${card.name}" style="width:100%;">`;
+                deckBuilder.appendChild(cardElement);
+            } else {
+                alert('Deck is full!');
+            }
+        }
         function createCard(card) {
             var container = document.createElement('div');
             container.className = 'card-container';
@@ -1215,7 +1243,14 @@
             frontFace.innerHTML = `<img src="${card.iconUrls.medium}" alt="${card.name}">`;
             var backFace = document.createElement('div');
             backFace.className = 'card-face card-back';
-            backFace.innerHTML = `<strong>${card.name}</strong><br>Elixir: ${card.elixirCost}<br>Rarity: ${card.rarity}`;
+            backFace.innerHTML = `<strong>${card.name}</strong><br>Elixir: ${card.elixirCost}<br>Rarity: ${card.rarity}<br>`;
+                        var addToDeckButton = document.createElement('button');
+            addToDeckButton.innerText = 'Add to Deck';
+            addToDeckButton.onclick = function(event) {
+                event.stopPropagation();
+                addToDeck(card);
+            };
+            backFace.appendChild(addToDeckButton);
             cardElement.appendChild(frontFace);
             cardElement.appendChild(backFace);
             cardElement.addEventListener('click', function() {
