--- a/_posts/2024-02-08-Index.md
+++ b/_posts/2024-02-08-Index.md
@@ -45,11 +45,11 @@
             max-width: 100%;
             height: auto;
         }
-    .deck-builder {
+        .deck-builder {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             gap: 10px;
-            margin-top: 20px;
+            margin-bottom: 20px; /* Adjusted to move the deck to the top */
         }
         .deck-card {
             width: 100px;
@@ -60,12 +60,13 @@
             border: 1px solid #ddd;
             box-shadow: 0 0 5px #ccc;
             background: #f9f9f9;
+            cursor: pointer; /* Makes it clear the deck cards are clickable */
         }
     </style>
 </head>
 <body>
-    <div id="cards"></div>
     <div id="deck-builder" class="deck-builder"></div> 
+    <div id="cards"></div>
     <script>
         var cardData = {
     "items": [
@@ -1194,13 +1195,27 @@
         };
         function addToDeck(card) {
             var deckBuilder = document.getElementById('deck-builder');
-            if (deckBuilder.children.length < 8) {
+            // Prevent adding duplicate cards
+            if (!deck.includes(card.id) && deck.length < 8) {
+                deck.push(card.id);
                 var cardElement = document.createElement('div');
                 cardElement.className = 'deck-card';
                 cardElement.innerHTML = `<img src="${card.iconUrls.medium}" alt="${card.name}" style="width:100%;">`;
+                cardElement.onclick = function() {
+                    removeCardFromDeck(card.id, cardElement);
+                };
                 deckBuilder.appendChild(cardElement);
+            } else if (deck.includes(card.id)) {
+                alert('This card is already in your deck!');
             } else {
                 alert('Deck is full!');
+            }
+        }
+        function removeCardFromDeck(cardId, cardElement) {
+            var index = deck.indexOf(cardId);
+            if (index > -1) {
+                deck.splice(index, 1); // Remove card from the deck array
+                cardElement.remove(); // Remove card element from the deck
             }
         }
         function createCard(card) {
@@ -1214,7 +1229,7 @@
             var backFace = document.createElement('div');
             backFace.className = 'card-face card-back';
             backFace.innerHTML = `<strong>${card.name}</strong><br>Elixir: ${card.elixirCost}<br>Rarity: ${card.rarity}<br>`;
-                        var addToDeckButton = document.createElement('button');
+            var addToDeckButton = document.createElement('button');
             addToDeckButton.innerText = 'Add to Deck';
             addToDeckButton.onclick = function(event) {
                 event.stopPropagation();
@@ -1231,7 +1246,7 @@
         }
         function displayCards() {
             var cardsContainer = document.getElementById('cards');
-            cardData.items.concat(cardData.supportItems).forEach(function(card) {
+            cardData.items.forEach(function(card) { // removed .concat(cardData.supportItems) since it's not defined
                 cardsContainer.appendChild(createCard(card));
             });
         }
