--- a/_posts/2024-02-08-Index.md
+++ b/_posts/2024-02-08-Index.md
@@ -65,7 +65,7 @@
     </style>
 </head>
 <body>
-    <div id="deck-builder" class="deck-builder"></div> 
+    <div id="deck-builder" class="deck-builder"></div> <!-- Moved to the top -->
     <div id="cards"></div>
     <script>
         var cardData = {
@@ -289,7 +289,17 @@
         "medium": "https://api-assets.clashroyale.com/cards/300/0p0gd0XaVRu1Hb1iSG1hTYbz2AN6aEiZnhaAib5O8Z8.png"
       },
       "rarity": "epic"
-    },    
+    },
+    {
+      "name": "Nigger",
+      "id": 26000021,
+      "maxLevel": 12,
+      "elixirCost": 4,
+      "iconUrls": {
+        "medium": "https://api-assets.clashroyale.com/cards/300/Ubu0oUl8tZkusnkZf8Xv9Vno5IO29Y-jbZ4fhoNJ5oc.png"
+      },
+      "rarity": "rare"
+    },
     {
       "name": "Hog Rider",
       "id": 26000021,
@@ -1191,8 +1201,9 @@
       },
       "rarity": "common"
     }
-            ]
+            ],            
         };
+        var deck = []; // Track cards in the deck
         function addToDeck(card) {
             var deckBuilder = document.getElementById('deck-builder');
             // Prevent adding duplicate cards
