--- a/_posts/2024-02-08-Index.md
+++ b/_posts/2024-02-08-Index.md
@@ -49,7 +49,7 @@
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             gap: 10px;
-            margin-bottom: 20px; /* Adjusted to move the deck to the top */
+            margin-bottom: 20px;
         }
         .deck-card {
             width: 100px;
@@ -60,12 +60,26 @@
             border: 1px solid #ddd;
             box-shadow: 0 0 5px #ccc;
             background: #f9f9f9;
-            cursor: pointer; /* Makes it clear the deck cards are clickable */
+            cursor: pointer;
+        }
+        .deck-builder-title {
+            text-align: center;
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+        .sort-buttons {
+            text-align: center;
+            margin: 10px 0;
         }
     </style>
 </head>
 <body>
-    <div id="deck-builder" class="deck-builder"></div> <!-- Moved to the top -->
+    <div class="sort-buttons">
+        <button onclick="sortCards('elixir')">Sort by Elixir</button>
+        <button onclick="sortCards('rarity')">Sort by Rarity</button>
+    </div>
+    <div class="deck-builder-title">Deck (Average Elixir: <span id="average-elixir">0</span>)</div>
+    <div id="deck-builder" class="deck-builder"></div>
     <div id="cards"></div>
     <script>
         var cardData = {
@@ -1206,7 +1220,6 @@
         var deck = []; // Track cards in the deck
         function addToDeck(card) {
             var deckBuilder = document.getElementById('deck-builder');
-            // Prevent adding duplicate cards
             if (!deck.includes(card.id) && deck.length < 8) {
                 deck.push(card.id);
                 var cardElement = document.createElement('div');
@@ -1216,6 +1229,7 @@
                     removeCardFromDeck(card.id, cardElement);
                 };
                 deckBuilder.appendChild(cardElement);
+                updateAverageElixir();
             } else if (deck.includes(card.id)) {
                 alert('This card is already in your deck!');
             } else {
@@ -1225,8 +1239,9 @@
         function removeCardFromDeck(cardId, cardElement) {
             var index = deck.indexOf(cardId);
             if (index > -1) {
-                deck.splice(index, 1); // Remove card from the deck array
-                cardElement.remove(); // Remove card element from the deck
+                deck.splice(index, 1);
+                cardElement.remove();
+                updateAverageElixir();
             }
         }
         function createCard(card) {
@@ -1255,9 +1270,27 @@
             container.appendChild(cardElement);
             return container;
         }
+        function sortCards(criteria) {
+            if (criteria === 'elixir') {
+                cardData.items.sort((a, b) => a.elixirCost - b.elixirCost);
+            } else if (criteria === 'rarity') {
+                const rarityOrder = ['common', 'rare', 'epic', 'legendary', 'champion'];
+                cardData.items.sort((a, b) => rarityOrder.indexOf(a.rarity) - rarityOrder.indexOf(b.rarity));
+            }
+            displayCards();
+        }
+        function updateAverageElixir() {
+            var totalElixir = deck.reduce((total, cardId) => {
+                var card = cardData.items.find(item => item.id === cardId);
+                return total + card.elixirCost;
+            }, 0);
+            var averageElixir = deck.length > 0 ? (totalElixir / deck.length).toFixed(2) : '0';
+            document.getElementById('average-elixir').textContent = averageElixir;
+        }
         function displayCards() {
             var cardsContainer = document.getElementById('cards');
-            cardData.items.forEach(function(card) { // removed .concat(cardData.supportItems) since it's not defined
+            cardsContainer.innerHTML = ''; // Clear existing cards
+            cardData.items.forEach(card => {
                 cardsContainer.appendChild(createCard(card));
             });
         }
