--- a/_posts/2024-02-08-Index.md
+++ b/_posts/2024-02-08-Index.md
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -49,7 +50,7 @@
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             gap: 10px;
-            margin-bottom: 20px;
+            margin-bottom: 20px; /* Adjusted to move the deck to the top */
         }
         .deck-card {
             width: 100px;
@@ -60,25 +61,26 @@
             border: 1px solid #ddd;
             box-shadow: 0 0 5px #ccc;
             background: #f9f9f9;
-            cursor: pointer;
-        }
-        .deck-builder-title {
-            text-align: center;
-            font-size: 20px;
-            margin-bottom: 10px;
+            cursor: pointer; /* Makes it clear the deck cards are clickable */
         }
         .sort-buttons {
             text-align: center;
-            margin: 10px 0;
+            margin: 20px 0;
+        }
+        button {
+            margin-right: 10px;
+            padding: 10px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
     <div class="sort-buttons">
-        <button onclick="sortCards('elixir')">Sort by Elixir</button>
-        <button onclick="sortCards('rarity')">Sort by Rarity</button>
+        <button onclick="sortCards('elixir', 'asc')">Sort by Elixir Low-High</button>
+        <button onclick="sortCards('elixir', 'desc')">Sort by Elixir High-Low</button>
+        <button onclick="sortCards('rarity', 'asc')">Sort by Rarity Asc</button>
+        <button onclick="sortCards('rarity', 'desc')">Sort by Rarity Desc</button>
     </div>
-    <div class="deck-builder-title">Deck (Average Elixir: <span id="average-elixir">0</span>)</div>
     <div id="deck-builder" class="deck-builder"></div>
     <div id="cards"></div>
     <script>
@@ -1220,6 +1222,7 @@
         var deck = []; // Track cards in the deck
         function addToDeck(card) {
             var deckBuilder = document.getElementById('deck-builder');
+            // Prevent adding duplicate cards
             if (!deck.includes(card.id) && deck.length < 8) {
                 deck.push(card.id);
                 var cardElement = document.createElement('div');
@@ -1229,7 +1232,6 @@
                     removeCardFromDeck(card.id, cardElement);
                 };
                 deckBuilder.appendChild(cardElement);
-                updateAverageElixir();
             } else if (deck.includes(card.id)) {
                 alert('This card is already in your deck!');
             } else {
@@ -1239,9 +1241,8 @@
         function removeCardFromDeck(cardId, cardElement) {
             var index = deck.indexOf(cardId);
             if (index > -1) {
-                deck.splice(index, 1);
-                cardElement.remove();
-                updateAverageElixir();
+                deck.splice(index, 1); // Remove card from the deck array
+                cardElement.remove(); // Remove card element from the deck
             }
         }
         function createCard(card) {
@@ -1270,27 +1271,23 @@
             container.appendChild(cardElement);
             return container;
         }
-        function sortCards(criteria) {
+        function sortCards(criteria, order) {
             if (criteria === 'elixir') {
-                cardData.items.sort((a, b) => a.elixirCost - b.elixirCost);
+                cardData.items.sort((a, b) => order === 'asc' ? a.elixirCost - b.elixirCost : b.elixirCost - a.elixirCost);
             } else if (criteria === 'rarity') {
                 const rarityOrder = ['common', 'rare', 'epic', 'legendary', 'champion'];
-                cardData.items.sort((a, b) => rarityOrder.indexOf(a.rarity) - rarityOrder.indexOf(b.rarity));
+                cardData.items.sort((a, b) => {
+                    return order === 'asc' ?
+                    rarityOrder.indexOf(a.rarity) - rarityOrder.indexOf(b.rarity) :
+                    rarityOrder.indexOf(b.rarity) - rarityOrder.indexOf(a.rarity);
+                });
             }
             displayCards();
         }
-        function updateAverageElixir() {
-            var totalElixir = deck.reduce((total, cardId) => {
-                var card = cardData.items.find(item => item.id === cardId);
-                return total + card.elixirCost;
-            }, 0);
-            var averageElixir = deck.length > 0 ? (totalElixir / deck.length).toFixed(2) : '0';
-            document.getElementById('average-elixir').textContent = averageElixir;
-        }
         function displayCards() {
             var cardsContainer = document.getElementById('cards');
-            cardsContainer.innerHTML = ''; // Clear existing cards
-            cardData.items.forEach(card => {
+            cardsContainer.innerHTML = ''; // Clear the container
+            cardData.items.forEach(function(card) {
                 cardsContainer.appendChild(createCard(card));
             });
         }
