--- a/_posts/2024-02-08-Index.md
+++ b/_posts/2024-02-08-Index.md
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Clash Royale Card Display and Flip</title>
     <style>
-        .card-container {
+       .card-container {
             perspective: 1000px;
             width: 140px;
             height: 190px;
@@ -50,7 +49,7 @@
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             gap: 10px;
-            margin-bottom: 20px; /* Adjusted to move the deck to the top */
+            margin-bottom: 20px;
         }
         .deck-card {
             width: 100px;
@@ -61,26 +60,36 @@
             border: 1px solid #ddd;
             box-shadow: 0 0 5px #ccc;
             background: #f9f9f9;
-            cursor: pointer; /* Makes it clear the deck cards are clickable */
+            cursor: pointer;
+        }
+        .deck-builder-title {
+            text-align: center;
+            font-size: 20px;
+            margin-bottom: 10px;
         }
         .sort-buttons {
             text-align: center;
-            margin: 20px 0;
-        }
-        button {
-            margin-right: 10px;
-            padding: 10px;
-            cursor: pointer;
+            margin: 10px 0;
         }
     </style>
 </head>
 <body>
     <div class="sort-buttons">
-        <button onclick="sortCards('elixir', 'asc')">Sort by Elixir Low-High</button>
-        <button onclick="sortCards('elixir', 'desc')">Sort by Elixir High-Low</button>
-        <button onclick="sortCards('rarity', 'asc')">Sort by Rarity Asc</button>
-        <button onclick="sortCards('rarity', 'desc')">Sort by Rarity Desc</button>
+        <button onclick="sortCards('elixir', 'asc')">Sort by Elixir Low to High</button>
+        <button onclick="sortCards('elixir', 'desc')">Sort by Elixir High to Low</button>
+        <button onclick="sortCards('rarity', 'asc')">Sort by Rarity Low to High</button>
+        <button onclick="sortCards('rarity', 'desc')">Sort by Rarity High to Low</button>
     </div>
+    <div class="deck-builder-title">Deck (Average Elixir: <span id="average-elixir">0</span>)</div>
+    <div id="deck-builder" class="deck-builder"></div>
+    <!-- Save Deck Button -->
+    <button id="save-deck" style="display:none;" onclick="saveDeck()">Save Deck</button>
+    <div id="cards"></div>
+    <!-- Section for displaying saved decks -->
+    <h2>Saved Decks</h2>
+    <div id="saved-decks"></div>
+    </div>
+    <div class="deck-builder-title">Deck (Average Elixir: <span id="average-elixir">0</span>)</div>
     <div id="deck-builder" class="deck-builder"></div>
     <div id="cards"></div>
     <script>
@@ -1222,7 +1231,6 @@
         var deck = []; // Track cards in the deck
         function addToDeck(card) {
             var deckBuilder = document.getElementById('deck-builder');
-            // Prevent adding duplicate cards
             if (!deck.includes(card.id) && deck.length < 8) {
                 deck.push(card.id);
                 var cardElement = document.createElement('div');
@@ -1232,6 +1240,7 @@
                     removeCardFromDeck(card.id, cardElement);
                 };
                 deckBuilder.appendChild(cardElement);
+                updateAverageElixir();
             } else if (deck.includes(card.id)) {
                 alert('This card is already in your deck!');
             } else {
@@ -1241,8 +1250,9 @@
         function removeCardFromDeck(cardId, cardElement) {
             var index = deck.indexOf(cardId);
             if (index > -1) {
-                deck.splice(index, 1); // Remove card from the deck array
-                cardElement.remove(); // Remove card element from the deck
+                deck.splice(index, 1);
+                cardElement.remove();
+                updateAverageElixir();
             }
         }
         function createCard(card) {
@@ -1271,26 +1281,71 @@
             container.appendChild(cardElement);
             return container;
         }
-        function sortCards(criteria, order) {
+       function sortCards(criteria, order = 'asc') {
             if (criteria === 'elixir') {
                 cardData.items.sort((a, b) => order === 'asc' ? a.elixirCost - b.elixirCost : b.elixirCost - a.elixirCost);
             } else if (criteria === 'rarity') {
                 const rarityOrder = ['common', 'rare', 'epic', 'legendary', 'champion'];
                 cardData.items.sort((a, b) => {
-                    return order === 'asc' ?
-                    rarityOrder.indexOf(a.rarity) - rarityOrder.indexOf(b.rarity) :
-                    rarityOrder.indexOf(b.rarity) - rarityOrder.indexOf(a.rarity);
+                    if (order === 'asc') {
+                        return rarityOrder.indexOf(a.rarity) - rarityOrder.indexOf(b.rarity);
+                    } else {
+                        return rarityOrder.indexOf(b.rarity) - rarityOrder.indexOf(a.rarity);
+                    }
                 });
             }
             displayCards();
         }
+        function updateAverageElixir() {
+            var totalElixir = deck.reduce((total, cardId) => {
+                var card = cardData.items.find(item => item.id === cardId);
+                return total + card.elixirCost;
+            }, 0);
+            var averageElixir = deck.length > 0 ? (totalElixir / deck.length).toFixed(2) : '0';
+            document.getElementById('average-elixir').textContent = averageElixir;
+        }
         function displayCards() {
             var cardsContainer = document.getElementById('cards');
-            cardsContainer.innerHTML = ''; // Clear the container
-            cardData.items.forEach(function(card) {
+            cardsContainer.innerHTML = ''; // Clear existing cards
+            cardData.items.forEach(card => {
                 cardsContainer.appendChild(createCard(card));
             });
         }
+        var savedDecks = []; // Array to store saved decks
+        function updateSaveDeckButton() {
+            document.getElementById('save-deck').style.display = deck.length === 8 ? 'block' : 'none';
+        }
+        function saveDeck() {
+            var title = prompt("Enter a title for your deck:");
+            var description = prompt("Enter a description for your deck:");
+            if (title && description) {
+                var deckDetails = {
+                    title: title,
+                    description: description,
+                    cards: deck.slice() // Copy the current deck
+                };
+                savedDecks.push(deckDetails);
+                displaySavedDecks();
+                deck = []; // Clear the current deck
+                document.getElementById('deck-builder').innerHTML = ''; // Clear the displayed deck
+                updateAverageElixir();
+                updateSaveDeckButton();
+            }
+        }
+        function displaySavedDecks() {
+            var savedDecksContainer = document.getElementById('saved-decks');
+            savedDecksContainer.innerHTML = ''; // Clear previous saved decks
+            savedDecks.forEach(function(deck, index) {
+                var deckElem = document.createElement('div');
+                deckElem.innerHTML = `<h3>${deck.title}</h3><p>${deck.description}</p>`;
+                savedDecksContainer.appendChild(deckElem);
+            });
+        }
+
+        // Modify the addToDeck function to include updateSaveDeckButton call
+        // Modify the removeCardFromDeck function to include updateSaveDeckButton call
+
+        // Call displayCards at the end of your script to initialize the card display
         displayCards();
     </script>
 </body>
