--- a/_posts/2024-02-08-Index.md
+++ b/_posts/2024-02-08-Index.md
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Clash Royale Card Display and Flip</title>
     <style>
-       .card-container {
+        /* Existing styles */
+        .card-container {
             perspective: 1000px;
             width: 140px;
             height: 190px;
@@ -71,6 +73,20 @@
             text-align: center;
             margin: 10px 0;
         }
+        /* New styles for saving and displaying decks */
+        #save-deck-container input[type="text"] {
+            margin-right: 10px;
+            padding: 5px;
+            font-size: 16px;
+        }
+        #save-deck-container button, #saved-decks button {
+            padding: 5px 10px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        #saved-decks button {
+            margin: 5px;
+        }
     </style>
 </head>
 <body>
@@ -82,17 +98,15 @@
     </div>
     <div class="deck-builder-title">Deck (Average Elixir: <span id="average-elixir">0</span>)</div>
     <div id="deck-builder" class="deck-builder"></div>
-    <!-- Save Deck Button -->
-    <button id="save-deck" style="display:none;" onclick="saveDeck()">Save Deck</button>
     <div id="cards"></div>
-    <!-- Section for displaying saved decks -->
-    <h2>Saved Decks</h2>
-    <div id="saved-decks"></div>
+   <!-- New HTML for saving and displaying decks -->
+    <div id="save-deck-container" style="margin-top: 20px; text-align: center; display: none;">
+        <input type="text" id="deck-name" placeholder="Enter deck name" />
+        <button onclick="saveDeck()">Save Deck</button>
     </div>
-    <div class="deck-builder-title">Deck (Average Elixir: <span id="average-elixir">0</span>)</div>
-    <div id="deck-builder" class="deck-builder"></div>
-    <div id="cards"></div>
+    <div id="saved-decks" style="margin-top: 20px;"></div>
     <script>
+        <script>
         var cardData = {
     "items": [
                 {
@@ -1311,42 +1325,47 @@
                 cardsContainer.appendChild(createCard(card));
             });
         }
-        var savedDecks = []; // Array to store saved decks
-        function updateSaveDeckButton() {
-            document.getElementById('save-deck').style.display = deck.length === 8 ? 'block' : 'none';
-        }
-        function saveDeck() {
-            var title = prompt("Enter a title for your deck:");
-            var description = prompt("Enter a description for your deck:");
-            if (title && description) {
-                var deckDetails = {
-                    title: title,
-                    description: description,
-                    cards: deck.slice() // Copy the current deck
-                };
-                savedDecks.push(deckDetails);
-                displaySavedDecks();
-                deck = []; // Clear the current deck
-                document.getElementById('deck-builder').innerHTML = ''; // Clear the displayed deck
-                updateAverageElixir();
-                updateSaveDeckButton();
+       displayCards();
+                     function saveDeck() {
+            var deckName = document.getElementById('deck-name').value.trim();
+            if (!deckName) {
+                alert('Please enter a deck name.');
+                return;
             }
+            if (savedDecks[deckName]) {
+                alert('A deck with this name already exists. Please choose a different name.');
+                return;
+            }
+            savedDecks[deckName] = [...deck];
+            displaySavedDecks();
+            alert('Deck saved successfully.');
         }
-        function displaySavedDecks() {
+       function displaySavedDecks() {
             var savedDecksContainer = document.getElementById('saved-decks');
-            savedDecksContainer.innerHTML = ''; // Clear previous saved decks
-            savedDecks.forEach(function(deck, index) {
-                var deckElem = document.createElement('div');
-                deckElem.innerHTML = `<h3>${deck.title}</h3><p>${deck.description}</p>`;
-                savedDecksContainer.appendChild(deckElem);
+            savedDecksContainer.innerHTML = '';
+            Object.keys(savedDecks).forEach(deckName => {
+                var button = document.createElement('button');
+                button.textContent = deckName;
+                button.onclick = function() {
+                    displayDeck(deckName);
+                };
+                savedDecksContainer.appendChild(button);
             });
         }
-
-        // Modify the addToDeck function to include updateSaveDeckButton call
-        // Modify the removeCardFromDeck function to include updateSaveDeckButton call
-
-        // Call displayCards at the end of your script to initialize the card display
-        displayCards();
+        function displayDeck(deckName) {
+            var deckIds = savedDecks[deckName];
+            var deckBuilder = document.getElementById('deck-builder');
+            deckBuilder.innerHTML = '';
+            deck = deckIds;
+            deckIds.forEach(cardId => {
+                var card = cardData.items.find(item => item.id === cardId);
+                if (card) { // Ensure the card exists in the data
+                    addToDeck(card, true); // Add to deck without checking the deck size
+                }
+            });
+            updateAverageElixir();
+            document.getElementById('save-deck-container').style.display = 'none';
+        }
     </script>
 </body>
 </html>
